# Self_Balacing_Hexapod_Robot

./: README.md
hardware_testing/: IMUtest.py  servo_control.py
ros2_ws/install/i2c_comms/share/i2c_comms/: package.xml
ros2_ws/log/: latest_build
ros2_ws/src/gpio_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/src/gpio_sensors/gpio_sensors/: __init__.py  gpio_sensor_node.py
ros2_ws/src/gpio_sensors/install/: local_setup.sh  setup.sh
ros2_ws/src/gpio_sensors/install/gpio_sensors/lib/gpio_sensors/: gpio_sensor_node
ros2_ws/src/gpio_sensors/install/gpio_sensors/share/gpio_sensors/: package.bash  package.dsv  package.ps1  package.sh
ros2_ws/src/gpio_sensors/log/: latest_build
ros2_ws/src/hexapod_msgs/: CMakeLists.txt
ros2_ws/src/i2c_comms/: package.xml
ros2_ws/src/i2c_comms/hardware_testing/: servo_control.py
ros2_ws/src/i2c_comms/src/: CMakeLists.txt  static_balancer.cpp
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/gpio_sensors/share/gpio_sensors/: package.zsh
ros2_ws/src/kinematics/src/: SpiderLeg.cpp
ros2_ws/src/log/: latest_build
ros2_ws/src/static_balancer/: package.xml
ros2_ws/src/static_balancing/: package.xml  setup.cfg  setup.py
ros2_ws/src/static_balancing/config/: params.yaml
ros2_ws/src/static_balancing/launch/: static_balancing_launch.py
ros2_ws/src/static_balancing/static_balancing/: static_balancing_node.py
ros2_ws/src/static_balancing/test/: test_static_balancing.py
ros2_ws/src/support_polygon_calculator/: CMakeLists.txt  package.xml
ros2_ws/src/support_polygon_calculator/src/: support_polygon_calculator.cpp
