<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpio_sensors</name>
  <version>0.0.1</version>
  <description>A package to monitor GPIO sensors for foot states</description>
  <maintainer email="ellahick@buffalo.edu">spiderbot</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>RPi.GPIO</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
