<?xml version="1.0"?>
<package format="3">
  <name>support_polygon_calculator</name>
  <version>0.1.0</version>
  <description>Calculates the support polygon and stability margin for a hexapod robot.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hexapod_msgs</depend> <!-- Custom message package -->

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
